<resources>
    <string name="app_name">Park Italia</string>
    <string name="title_activity_landing_screen">LandingScreen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--loader-->
    <string name="Loader">Loading</string>

    <!--sign_in & Sign_up page-->

    <string name="Sing_in_e">Email</string>
    <string name="Sing_in_pass">Password</string>
    <string name="Sing_in_forget">Forgot Password</string>
    <string name="Sing_in_up">Sign Up</string>
    <string name="Sign_up_f_name">First Name</string>
    <string name="Sign_up_l_name">Last Name</string>
    <string name="Sign_up_confirm_pass">Confirm Password</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!--facebook id-->
    <string name="facebook_id">1808513186105946</string>
    <string name="googleProjectid">530496450037</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAtUvQTirIhpDUe5XbOHogeSgzFymxv0oc</string>

    <!--dialog box-->
    <string name="dialog_msg">Welcome to ParkItalia </string>
    <string name="view">View Tutorial </string>
    <string name="find">Find Parking </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <array name="map_point_type">
        <item>Distance</item>
        <item>Price</item>
        <item>Availability</item>
        <item>Rating</item>
        <item>Name</item>
    </array>
    <string name="title_activity_accomodation_map">Map</string>


</resources>
