<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="@color/green1"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/back_signup"
                android:layout_width="25dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:src="@drawable/back"/>
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:gravity="left|center"
                android:text="Sign up"
                android:textColor="@android:color/white"
                android:textSize="30sp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8.8"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"></LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".9"
                    android:background="@drawable/edbg"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/user"/>

                    <EditText
                        android:id="@+id/firstname_edittext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="left|center"
                        android:hint="@string/Sign_up_f_name"
                        android:inputType="textPersonName"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".9"
                    android:background="@drawable/edbg"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/user"/>

                    <EditText
                        android:id="@+id/lastname_edittext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="left|center"
                        android:hint="@string/Sign_up_l_name"
                        android:inputType="textPersonName"
                        android:textColor="@android:color/black"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/edbg"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/email"/>
                </LinearLayout>

                <EditText
                    android:id="@+id/email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ems="10"
                    android:gravity="left|center"
                    android:hint="@string/Sing_in_e"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black"/>

                <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginLeft="5dp"-->
                <!--android:gravity="left|center"-->
                <!--android:text="Email"-->
                <!--android:textColor="@android:color/black" />-->
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/edbg"

                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/password"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/pass_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ems="10"
                    android:gravity="left|center"
                    android:hint="@string/Sing_in_pass"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/edbg"

                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/password"/>
                </LinearLayout>

                <EditText
                    android:id="@+id/confrm_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ems="10"
                    android:gravity="left|center"
                    android:hint="@string/Sign_up_confirm_pass"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"/>

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/button_green_rounded_bg"
                android:text="Sign Up"
                android:textColor="#FFF"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:src="@drawable/or"/>

            <ImageView
                android:id="@+id/sign_up_fb"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/fbnewuser"/>
      <com.facebook.login.widget.LoginButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:visibility="gone"
          android:id="@+id/login_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"></LinearLayout>

    </LinearLayout>

</LinearLayout>